fixing misaligned flex boxes

--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,7 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 body {
@@ -105,8 +106,8 @@ input[type='checkbox']:checked {
     gap: 20px;
     max-width: 400px;
     width: 100%;
-    margin: 0 auto;
     align-items: center;
+    margin: 0 auto 20px;
 }
 
 .button {
@@ -137,6 +138,9 @@ footer {
     padding: 10px;
     background-color: #000000;
     border-top: 2px solid #ffff00;
+    position: relative;
+    width: 100%;
+    bottom: 0;
 }
 
 .scout-form {
@@ -297,4 +301,18 @@ footer {
 
 .team-card:hover {
     background-color: #4a4a4a;
+}
+
+.info-container {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.info-left, .info-right {
+    width: 48%;
+}
+
+.info-left p, .info-right p {
+    margin: 5px 0;
 }
